# docker-duplicity

./: .copier-answers.autopretty.yml  .copier-answers.image-template.yml  .dockerignore  .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierrc.yml  Dockerfile  README.md  docker-s3.Dockerfile  docker.Dockerfile  entrypoint.sh  jobrunner.py  latest-s3.Dockerfile  postgres-s3.Dockerfile  postgres.Dockerfile  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: automerge.yml  cd.yaml  ci.yaml  ci.yml  dependabot-merge.yml  pre-commit.yml
compose/: docker-compose.yml
hooks/: build  build.sh  post_build  post_push  pre_build  push
tests/: conftest.py  test_requirements.py  test_service.py
