[tool.poetry]
name = "docker-duplicity"
version = "0.1.0"
description = ""
authors = ["Tecnativa"]

[tool.poetry.dependencies]
python = "^3.8"
b2 = {version = "^3.4.0", optional = true}
b2sdk = {version = "1.16.0", optional = true}
boto = {version = "^2.49.0", optional = true}
boto3 = {version = "^1.34.87", optional = true}
gdata = {version = "^2.0.18", optional = true}
jottalib = {version = "^0.5.1", optional = true}
paramiko = {version = "^3.4.0", optional = true}
pexpect = {version = "^4.9.0", optional = true}
PyDrive = {version = "^1.3.1", optional = true}
PyDrive2 = {version = "^1.19.0", optional = true}
python-swiftclient = {version = "^4.5.0", optional = true}
requests-oauthlib = {version = "^2.0.0", optional = true}
duplicity = {version = "^1.2.3", optional = true}
dropbox = {version = "^11.36.2", optional = true}
python-keystoneclient = {version = "^5.4.0", optional = true}
idna = {version = "3.7", optional = true}
pyyaml = "6.0.1"
lxml = "5.2.1"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
black = "^24.4"
flake8 = "^5.0.4"
plumbum = "^1.8.2"
pytest-xdist = "^3.5.0"

[tool.poetry.extras]
duplicity = ["b2", "b2sdk", "boto", "boto3", "gdata", "jottalib", "paramiko", "pexpect", "PyDrive", "PyDrive2", "python-swiftclient", "requests-oauthlib", "duplicity", "dropbox", "python-keystoneclient"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
