[tool.poetry]
name = "docker-duplicity"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Tecnativa"]

[tool.poetry.dependencies]
atom = "^0.12.1"
python = ">=3.10,<3.15"
b2 = {version = "^3.4.0", optional = true}
b2sdk = {version = "1.16.0", optional = true}
boto = {version = "^2.49.0", optional = true}
boto3 = {version = "^1.40.48", optional = true}
gdata = {version = "^2.0.18", optional = true}
jottalib = {version = "^0.5.1", optional = true}
paramiko = {version = "^4.0.0", optional = true}
pexpect = {version = "^4.9.0", optional = true}
PyDrive = {version = "^1.3.1", optional = true}
PyDrive2 = {version = "^1.21.3", optional = true}
python-novaclient = ">=2.27,<19.0"
python-keystoneclient = ">=3,<6"
simplejson = ">=3.19"
netifaces = "==0.11.0"
python-swiftclient = {version = "^4.8.0", optional = true}
requests-oauthlib = {version = "^2.0.0", optional = true}
duplicity = {version = "^3.0.0"}
dropbox = {version = "^11.36.2", optional = true}
idna = {version = "3.10", optional = true}
pyyaml = "6.0.3"
lxml = "6.0.2"
requests = "^2.32.5"
poetry-plugin-export = "^1.9.0"
urllib3 = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.1"
flake8 = "^7.3.0"
plumbum = "^1.9.0"
pytest-xdist = "^3.8.0"

[tool.poetry.extras]
duplicity = ["b2", "b2sdk", "boto", "boto3", "gdata", "jottalib", "paramiko", "pexpect", "PyDrive", "PyDrive2", "python-swiftclient", "requests-oauthlib", "dropbox"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
